--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
-    "debug": "export DEBUG=* && npm run start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug-app": "export NODE_ENV=development && nodemon src/app.ts"
+    "debug": "export NODE_ENV=development && nodemon src/app.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +20,7 @@
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
     "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
@@ -32,6 +32,7 @@
     "@types/debug": "^4.1.7",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.1",
