--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "export NODE_ENV=development && nodemon src/app.ts"
+    "debug": "export NODE_ENV=development && nodemon src/app.ts",
+    "lint": "src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "express-winston": "^4.2.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6",
@@ -33,6 +35,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/moment": "^2.13.0",
     "@types/node": "^18.0.0",
     "source-map-support": "^0.5.21",
     "ts-node": "^10.8.1",
