--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node --unhandled-rejections=strict ./dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "export NODE_ENV=development && nodemon src/app.ts",
-    "lint": "src/**/*.ts"
+    "lint": "src/**/*.ts",
+    "build": "tsc --build"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +21,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
