--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "debug": "export NODE_ENV=development && nodemon src/app.ts",
     "lint": "src/**/*.ts",
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "pack": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -40,8 +41,12 @@
     "@types/moment": "^2.13.0",
     "@types/node": "^18.0.0",
     "source-map-support": "^0.5.21",
+    "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
     "tslint": "^6.1.3",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
