--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
     "compilerOptions": {
-      "target": "es2022",
+      "target": "es2016",
       "module": "commonjs",
       "outDir": "./dist",
       "strict": true,
       "esModuleInterop": true,
-      "inlineSourceMap": true,
+      "inlineSourceMap": false,
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
+    },
+    "buildOptions": {
+      
     }
   }
